<resources>
    <string name="app_name" translatable="false">Weather</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="week">Week</string>
    <string name="update">Update</string>
    <string name="weather_degree" translatable="false">+22</string>
    <string name="tomorrow_degree" translatable="false">+17</string>
    <string name="cityName">Enter city name</string>
    <string name="check">Check</string>
    <string name="air_humidity">Air humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="show_weather_data">Additional option</string>
    <string name="pressure_data">920.0 mbar</string>
    <string name="wind_speed_data">6.5 km/h </string>
    <string name="air_humidity_data">39%</string>
    <string name="tomorrow_air_humidity_data">71%</string>
    <string name="tomorrow_wind_speed_data">11.7 km/h </string>
    <string name="tomorrow_pressure_data">1090.0 mbar</string>
    <string name="in_development">In development</string>
</resources>
